# swagger_server/swagger/swagger.yaml
@@ -6,6 +6,58 @@ info:
 servers:
 - url: /rest/technical-control-api/v1.0/
 paths:
+  /get/all-driver-vehicles:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos los conductores
+      description: Devuelve todos las conductores de la base
+      operationId: get_all_drivers
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
   /post/technical-control:
     post:
       tags:
@@ -79,6 +131,9 @@ components:
             type: integer
           example: [1,2,3]
         id_truck_license:
+          type: integer
+          example: 1
+        id_driver:
           type: integer
           example: 1
         initial_gasoline:
